# ocr_py

./: .gitignore  README.md  experiments.ipynb  pyproject.toml
