[tool.poetry]
name = "ocr-py"
version = "0.1.0"
description = ""
authors = ["Cloves Paiva <cloves.paiva@extremedigital.com.br>"]
readme = "README.md"
packages = [{include = "ocr_py"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
pytesseract = "^0.3.10"
pdf2image = "^1.16.2"
matplotlib = "^3.6.3"
spacy = "^3.5.0"
spaczz = "^0.5.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
